--- a/HW3.vcxproj
+++ b/HW3.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="Door.h" />
     <ClInclude Include="Elevator.h" />
     <ClInclude Include="Floor.h" />
+    <ClInclude Include="GlobalClock.h" />
     <ClInclude Include="Person.h" />
     <ClInclude Include="Scheduler.h" />
   </ItemGroup>
@@ -155,6 +156,7 @@
     <ClCompile Include="Door.cpp" />
     <ClCompile Include="Elevator.cpp" />
     <ClCompile Include="Floor.cpp" />
+    <ClCompile Include="GlobalClock.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Person.cpp" />
     <ClCompile Include="Scheduler.cpp" />
